--- a/source/_posts/20210205zatan.md
+++ b/source/_posts/20210205zatan.md
@@ -10,7 +10,7 @@ cover: /image/cover.jpeg
 
 
 
-这个记忆源于当时在京都，就在这条街上，吃了一个小小的方方正正的抹茶蛋糕。因为觉得太贵了没有点饮料。听说夜色下这个更美丽，所以在太阳还没落山的时候，在河边的海岸上走了走。那边的海鸟不怕人，只想吃东西。河岸看起来特别熟悉，后来仔细想了一下，是《玉子市场》的特别篇《玉子爱情故事》里面饼藏在这个河岸边上呐喊的情景的发生地。
+这个记忆源于当时在京都，就在这条街上，吃了一个小小的方方正正的抹茶蛋糕。因为觉得太贵了没有点饮料。听说夜色下街会更美丽，所以在太阳还没落山的时候，先在街的另一头的河边的海岸上走了走。那边的海鸟不怕人，只想吃东西。河岸看起来特别熟悉，后来仔细想了一下，是《玉子市场》的特别篇《玉子爱情故事》里面饼藏在这个河岸边上呐喊的情景的发生地。
 
 
 
